WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294391
WebKit is failing to register a service worker if script fetch is not fetched when document is being reloaded
https://bugs.webkit.org/show_bug.cgi?id=294391
Summary
WebKit is failing to register a service worker if script fetch is not fetched...
youenn fablet
Reported
2025-06-12 06:38:18 PDT
While this is not aligned to the way I read the service worker spec, Chrome and Firefox supports starting to register a service worker and reloading the document doing the registration. WebKit fails as it will cancel the service worker script fetch. This has web compatibility impact.
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2025-06-12 06:38:38 PDT
<
rdar://152398237
>
youenn fablet
Comment 2
2025-06-12 06:38:54 PDT
Issue can be seen in
https://www.capitalgroup.com/individual
.
youenn fablet
Comment 3
2025-06-13 00:37:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46702
EWS
Comment 4
2025-07-03 06:53:39 PDT
Committed
296970@main
(c53ee10740bf): <
https://commits.webkit.org/296970@main
> Reviewed commits have been landed. Closing PR #46702 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug