Source/WebCore/page/QuirksData.h
@@ -189,6 +189,7 @@ struct WEBCORE_EXPORT QuirksData {
     bool needsWebKitMediaTextTrackDisplayQuirk : 1 { false };
     bool needsMediaRewriteRangeRequestQuirk : 1 { false };
     bool shouldEnterNativeFullscreenWhenCallingElementRequestFullscreen : 1 { false };
+    bool shouldDelayReloadWhenRegisteringServiceWorker : 1 { false };
 };
 
 } // namespace WebCore
